examples/errors/error_unclosed_string.cay
// Error测试：未闭合字符串
public class TestUnclosedString {
    public static void main() {
        String s = "hello;
        println(s);
    }
}
